# RationalNumber

./: CMakeLists.txt  Exceptions.h  Exeptions.h  Rational.cpp  Rational.h  main.cpp
test/src/: RationalTest.cpp
